src/test/ui/existential_types/existential-types-with-cycle-error2.stderr
error: could not find defining uses
  --> $DIR/existential-types-with-cycle-error2.rs:7:1
   |
LL | existential type Foo: Bar<Foo, Item = Foo>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

